<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInfoErc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_erc" />

    <ListView
        android:id="@+id/lvEscapes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvLabelErrores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_max_errores" />

    <EditText
        android:id="@+id/etMaxErroresErc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvPartidasConfigErc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_partidas_config"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/bJugarErcPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_jugar_partida"
        android:layout_marginTop="8dp" />

</LinearLayout>
